--- a/AppVista/app/src/main/res/layout/activity_main.xml
+++ b/AppVista/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -8,44 +9,73 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
         <include layout="@layout/view_principal"/>
 
-       <!-- <com.google.android.material.bottomappbar.BottomAppBar
-            style="@style/Widget.MaterialComponents.BottomAppBar"
-            android:layout_width="match_parent"
+
+        <com.google.android.material.bottomappbar.BottomAppBar
             android:id="@+id/bottom_app_bar"
-            android:layout_height="wrap_content"
-            app:fabAlignmentMode="center"
-            app:fabAttached="true"
-            app:menu="@menu/botton_app"
-            app:fabCradleRoundedCornerRadius="-5dp"
-            app:fabCradleDiameter="0dp"
-            android:layout_gravity="bottom">
-
-        </com.google.android.material.bottomappbar.BottomAppBar>
-    -->
-
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bottom_navigation"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="70dp"
             android:layout_alignParentBottom="true"
             android:layout_gravity="bottom"
-            app:itemIconTint="#526876"
-            app:menu="@menu/botton_app" />
+            android:background="#FFFFFF"
+            app:fabAlignmentMode="center"
+            app:fabAttached="true"
+            app:fabCradleDiameter="0dp"
+            app:fabCradleRoundedCornerRadius="-5dp"
+            tools:ignore="BottomAppBar"/>
 
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            <com.google.android.material.bottomnavigation.BottomNavigationView
+                android:id="@+id/bottom_navigation"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_gravity="bottom"
+                app:fabAlignmentMode="center"
+                app:fabAttached="true"
+                android:layout_marginRight="0dp"
+                app:fabCradleDiameter="0dp"
+                app:itemIconTint="#526876"
+                app:itemTextColor="#FFFFFF"
+                app:menu="@menu/botton_app"/>
+
+
+        <ImageView
             android:id="@+id/fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_above="@+id/bottom_navigation"
-            android:layout_marginBottom="819dp"
-            android:backgroundTint="#F44336"
-            android:src="@drawable/ic_add_black_24dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:src="@drawable/mas_a"
             app:fabCustomSize="70dp"
-            app:layout_anchor="@id/bottom_navigation" />
+            android:elevation="5dp"
+
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="10dp"
+            app:layout_anchor="@+id/bottom_app_bar"
+            android:layout_marginLeft="170dp"
+            app:layout_anchorGravity="top|center" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:orientation="vertical"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:gravity="center"
+            android:layout_marginEnd="30dp"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/perfil_i"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#138eb7"
+                android:text="INICIO"/>
+
+        </LinearLayout>
 
     </RelativeLayout>
 
