--- a/AppVista/app/src/main/res/layout/view_principal.xml
+++ b/AppVista/app/src/main/res/layout/view_principal.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_gravity="center"
-        android:background="#0ba5d5"
+        android:background="@drawable/thumbnail_fondo_superior"
         android:orientation="vertical">
 
         <LinearLayout
@@ -49,8 +49,8 @@
                 android:padding="5dp"
                 android:src="@drawable/bell" />
 
-            <ImageView
-                android:layout_width="50dp"
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:layout_width="40dp"
                 android:layout_height="50dp"
                 android:padding="5dp"
                 android:src="@drawable/woman_lying_on_green_grass_while_holding_pencil_1458318" />
@@ -69,32 +69,45 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center">
 
-            <ImageView
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/cliente"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
                 android:layout_gravity="center"
-                android:padding="10dp"
-                app:layout_constraintCircleRadius="50dp"
                 android:src="@drawable/ionut_comanici_r_dc_ewh_5_h_sde_unsplash"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintCircleRadius="50dp"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="1.0" />
 
-            <TextView
+
+
+            <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity=""
-                android:background="#0ba5d5"
-                android:text="Cliente"
-                android:textColor="#FFFFFF"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:cardCornerRadius="10dp"
+                android:backgroundTint="#0ba5d5"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.849" />
+                app:layout_constraintVertical_bias="1.0">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="1dp"
+                    android:textSize="12dp"
+                    android:textColor="#FFFFFF"
+                   android:text="Cliente"/>
+
+            </androidx.cardview.widget.CardView>
+
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -103,6 +116,7 @@
             android:layout_height="match_parent"
             android:text="@string/nombre_cliente"
             android:textAlignment="center"
+            android:layout_marginTop="5dp"
             android:textAppearance="bolt"
             android:textSize="18sp" />
 
