--- a/AppVista/app/src/main/res/layout/activity_main.xml
+++ b/AppVista/app/src/main/res/layout/activity_main.xml
@@ -9,21 +9,24 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <include layout="@layout/view_principal"/>
 
 
         <com.google.android.material.bottomappbar.BottomAppBar
             android:id="@+id/bottom_app_bar"
+            style="@style/Widget.MaterialComponents.BottomAppBar"
             android:layout_width="match_parent"
-            android:layout_height="70dp"
+            android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_gravity="bottom"
             android:background="#FFFFFF"
-            app:fabAlignmentMode="center"
+            tools:ignore="BottomAppBar"/>
+          <!--  app:fabAlignmentMode="center"
             app:fabAttached="true"
             app:fabCradleDiameter="0dp"
-            app:fabCradleRoundedCornerRadius="-5dp"
-            tools:ignore="BottomAppBar"/>
+            app:fabCradleRoundedCornerRadius="-5dp"-->
+
 
 
             <com.google.android.material.bottomnavigation.BottomNavigationView
@@ -32,25 +35,19 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:layout_gravity="bottom"
-                app:fabAlignmentMode="center"
-                app:fabAttached="true"
-                android:layout_marginRight="0dp"
-                app:fabCradleDiameter="0dp"
                 app:itemIconTint="#526876"
-                app:itemTextColor="#FFFFFF"
+                app:itemTextColor="#00FFFFFF"
                 app:menu="@menu/botton_app"/>
 
 
         <ImageView
             android:id="@+id/fab"
-            android:layout_width="80dp"
+            android:layout_width="60dp"
             android:layout_height="80dp"
             android:src="@drawable/mas_a"
-            app:fabCustomSize="70dp"
-            android:elevation="5dp"
-
             android:layout_alignParentBottom="true"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="1dp"
+            android:elevation="6dp"
             app:layout_anchor="@+id/bottom_app_bar"
             android:layout_marginLeft="170dp"
             app:layout_anchorGravity="top|center" />
