--- a/AppVista/app/src/main/res/layout/view_principal.xml
+++ b/AppVista/app/src/main/res/layout/view_principal.xml
@@ -117,7 +117,8 @@
             android:text="@string/nombre_cliente"
             android:textAlignment="center"
             android:layout_marginTop="5dp"
-            android:textAppearance="bolt"
+            android:textColor="#070303"
+            android:textStyle="bold"
             android:textSize="18sp" />
 
         <TextView
@@ -219,7 +220,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:cardBackgroundColor="#51c1c9"
+        app:cardBackgroundColor="#8BDBE1"
         app:cardCornerRadius="36dp"
         app:cardElevation="2dp">
 
@@ -234,7 +235,7 @@
                 android:layout_marginTop="15dp"
                 android:text="HISTORIAL DE SOLICITUDES"
                 android:textAlignment="center"
-                android:textAppearance="bolt"
+                android:textStyle="bold"
                 android:textSize="25sp" />
 
             <androidx.cardview.widget.CardView
