--- a/AppVista/app/src/main/res/layout/activity_main.xml
+++ b/AppVista/app/src/main/res/layout/activity_main.xml
@@ -10,69 +10,23 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <include layout="@layout/view_principal"/>
+        <include layout="@layout/view_principal" />
 
-
-        <com.google.android.material.bottomappbar.BottomAppBar
-            android:id="@+id/bottom_app_bar"
-            style="@style/Widget.MaterialComponents.BottomAppBar"
+        <com.luseen.spacenavigation.SpaceNavigationView
+            android:id="@+id/space"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="70dp"
             android:layout_alignParentBottom="true"
             android:layout_gravity="bottom"
-            android:background="#FFFFFF"
-            tools:ignore="BottomAppBar"/>
-          <!--  app:fabAlignmentMode="center"
-            app:fabAttached="true"
-            app:fabCradleDiameter="0dp"
-            app:fabCradleRoundedCornerRadius="-5dp"-->
+            app:active_item_color="@color/colorPrimary"
+            app:centre_button_color="@color/colorCenterButton"
+            app:centre_button_icon="@drawable/ic_add_black_24dp"
+            app:inactive_item_color="@color/inactive"
+            app:space_background_color="@color/colorAccent"
+            app:space_item_icon_only_size="@dimen/space_item_icon_only_size"
+            app:space_item_icon_size="50dp"
+            app:space_item_text_size="@dimen/space_item_text_default_size" />
 
-
-
-            <com.google.android.material.bottomnavigation.BottomNavigationView
-                android:id="@+id/bottom_navigation"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_gravity="bottom"
-                app:itemIconTint="#526876"
-                app:itemTextColor="#00FFFFFF"
-                app:menu="@menu/botton_app"/>
-
-
-        <ImageView
-            android:id="@+id/fab"
-            android:layout_width="60dp"
-            android:layout_height="80dp"
-            android:src="@drawable/mas_a"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="1dp"
-            android:elevation="6dp"
-            app:layout_anchor="@+id/bottom_app_bar"
-            android:layout_marginLeft="170dp"
-            app:layout_anchorGravity="top|center" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:orientation="vertical"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:gravity="center"
-            android:layout_marginEnd="30dp"
-            android:layout_height="wrap_content">
-
-            <ImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:src="@drawable/perfil_i"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#138eb7"
-                android:text="INICIO"/>
-
-        </LinearLayout>
 
     </RelativeLayout>
 
