--- a/AppVista/app/src/main/res/layout/activity_main.xml
+++ b/AppVista/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         <com.luseen.spacenavigation.SpaceNavigationView
             android:id="@+id/space"
             android:layout_width="match_parent"
-            android:layout_height="70dp"
+            android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_gravity="bottom"
             app:active_item_color="@color/colorPrimary"
@@ -24,7 +24,7 @@
             app:inactive_item_color="@color/inactive"
             app:space_background_color="@color/colorAccent"
             app:space_item_icon_only_size="@dimen/space_item_icon_only_size"
-            app:space_item_icon_size="50dp"
+            app:space_item_icon_size="@dimen/space_item_icon_default_size"
             app:space_item_text_size="@dimen/space_item_text_default_size" />
 
 
