--- a/AppVista/app/src/main/res/layout/view_principal.xml
+++ b/AppVista/app/src/main/res/layout/view_principal.xml
@@ -143,7 +143,7 @@
 
                 <ImageView
                     android:layout_width="wrap_content"
-                    android:layout_height="35dp"
+                    android:layout_height="55dp"
                     android:src="@drawable/follower_l" />
 
                 <TextView
@@ -170,7 +170,7 @@
 
                 <ImageView
                     android:layout_width="wrap_content"
-                    android:layout_height="35dp"
+                    android:layout_height="50dp"
                     android:src="@drawable/follower_l2" />
 
                 <TextView
@@ -196,7 +196,7 @@
 
                 <ImageView
                     android:layout_width="wrap_content"
-                    android:layout_height="35dp"
+                    android:layout_height="49dp"
                     android:src="@drawable/riendship_l" />
 
                 <TextView
@@ -232,16 +232,18 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="10dp"
                 android:text="HISTORIAL DE SOLICITUDES"
                 android:textAlignment="center"
                 android:textStyle="bold"
-                android:textSize="25sp" />
+                android:textSize="22sp" />
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="15dp"
+                android:layout_marginRight="25dp"
+                android:layout_marginLeft="25dp"
+                android:layout_marginTop="10dp"
                 app:cardCornerRadius="10dp"
                 app:cardElevation="5dp">
 
@@ -281,10 +283,11 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="10dp"
                             android:layout_weight="1"
+                            android:layout_marginEnd="10dp"
                             android:text="@string/cargo"
                             android:textAlignment="textStart"
                             android:textColor="#000000"
-                            android:textSize="17sp" />
+                            android:textSize="15sp" />
 
                         <ImageView
                             android:layout_width="19dp"
