--- a/AppVista/app/src/main/res/values/colors.xml
+++ b/AppVista/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#0C5D78</color>
-    <color name="colorPrimaryDark">#138eb7</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#138eb7</color>
+    <color name="colorPrimaryDark">#0C5D78</color>
+    <color name="colorAccent">#F8F8F8</color>
+    <color name="colorCenterButton">#FF5722</color>
+    <color name="inactive">#2C2B2B</color>
 </resources>
